<resources>
    <string name="app_name">push_notifications</string>
    <string name="app_title">Push Notifications</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="token">Token</string>
    <string name="send">Send</string>
    <string name="title_input">Enter Title</string>
    <string name="message_input">Enter Message</string>
    <string name="token_input">Enter Token</string>
    <string name="back">Back to Main</string>
    <string name="other_activity">Other Activity</string>
    <string name="token_explanation">Keep your device\'s token to send notifications to this device. Remove the token to send notifications to all devices. Add the token of another device to send notifications to that device.</string>
</resources>